# fair-cdr

./: .gitignore  LICENSE  README.md  dvc.yaml  pyproject.toml
data/calibration/: .gitignore
notebooks/: README.md  fair-ssp.ipynb
